<resources>
    <string name="app_name">Hamster Havok!</string>
    <string name="music_toggle_label">Music</string>
    <string name="game_instructions">Use the arrows to jump and move left and right. Avoid all the obstacles and set a new high-score!</string>
    <string name="settings">Settings for the game</string>
    <string name="instruction_title">How To Play the Game!</string>
    <string name="start">Start here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_score_label" />
    <string name="genericHighScoreVal">0</string>
</resources>