<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/start_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/start_background"
        android:scaleType="centerCrop"
        />

    <!-- High score -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/highScoreContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/highScoreLabel"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/high_score_label"
            android:contentDescription="@string/high_score_label"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/highScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genericHighScoreVal"
            android:textSize="37sp"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="@id/highScoreLabel"
            app:layout_constraintEnd_toEndOf="@id/highScoreLabel"
            app:layout_constraintStart_toStartOf="@id/highScoreLabel"
            app:layout_constraintBottom_toBottomOf="@id/highScoreLabel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/settings_button"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />

    <ImageButton
        android:id="@+id/how_to_play_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/question_mark"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/instruction_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        />

    <!--<ImageButton
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/hamster_havok"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/start"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        /> -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/hamster_havok"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/start"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/start"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="48dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
